--- a/scss/0.base/_2.fonts.scss
+++ b/scss/0.base/_2.fonts.scss
@@ -24,15 +24,17 @@
 }
 
 $font-icons: (
+  // Note, some of the comments look unnecessarily extra, but Prettier screws up my code if I don't use them.
   //
-  // header-top
+  // Header-top
   //
   mouse: "\e906",
   paper-plane: "\e907",
   magnify-glass: "\e904",
   three-lines: "\e9BD",
+
   //
-  // nav-bar
+  // Nav-bar
   //
   laptop2: "\e957",
   monitor: "\e956",
@@ -41,51 +43,92 @@ $font-icons: (
   code: "\eA80",
   shield: "\e903",
   diploma-hat: "\e902",
-  // Bespoke submenu
+
+  //
+  // Bespoke Submenu
+  //
   cogs: "\e90C",
   mobile: "\e958",
-  //
-  quote-bubble: "\e905",
+  download-server-box: "\e9C7",
+  cloud: "\e9C1",
+  briefcase: "\e90D",
+  folder: "\e930",
+  group: "\e90F",
+  cloud-download: "\e90B",
   shuffle-arrows: "\e908",
   transfer-arrows: "\e909",
-  //
-  globe: "\e90A",
-  cloud-download: "\e90B",
-
-  briefcase: "\e90D",
   laptop: "\e90E",
-  group: "\e90F",
+  globe: "\e90A",
+
+  //
+  // IT Support Submenu
+  //
+  headphones: "\e911",
+  // briefcase: "\e90D", (already used in Bespoke Submenu)
+  // laptop: "\e90E", (already used in Bespoke Submenu)
+  // diploma-hat: "\e902", (already used in Nav-bar)
+  // cloud: "\e9C1", (already used in Bespoke Submenu)
   //
   hard-drive: "\e910",
-  headphones: "\e911",
+  //
+  // Digital Marketing Submenu
+  //
+  // magnify-glass: "\e904", (already used in Header-top)
+  //
   money: "\e912",
-  mail: "\e913",
-  pencil: "\e914",
   graph-arrow: "\e915",
-  handshake: "\e916",
-  phone-square: "\e917",
-  speed-test: "\e918",
-  trolley: "\e919",
+  mail: "\e913",
+  // group: "\e90F", (already used in Bespoke Submenu)
   //
-  megaphone: "\e91A",
-  paper-folded-corner: "\e91B",
-  padlock: "\e91C",
-  clock: "\e91D",
-  vial: "\e91E",
-  question-mark: "\e91F",
+  pencil: "\e914",
   //
-  folder: "\e930",
+  // Telecoms Services Submenu
+  //
   ticket: "\e939",
   phone: "\e942",
-
-  cloud: "\e9C1",
-  download-server-box: "\e9C7",
+  phone-square: "\e917",
+  speed-test: "\e918",
+  handshake: "\e916",
+  // phone-ring: "\e900", (already used in Nav-bar)
+  //
+  // Web Design Submenu
+  //
+  // pencil: "\e914", (already used in Digital Marketing Submenu)
+  //
+  trolley: "\e919",
+  // monitor: "\e956", (already used in Nav-bar)
+  //
+  megaphone: "\e91A",
+  // mobile: "\e958", (already used in Bespoke Submenu)
+  // cloud: "\e9C1", (already used in Bespoke Submenu)
+  //
+  // Cyber Security Submenu
+  //
+  //
+  paper-folded-corner: "\e91B",
+  clock: "\e91D",
+  vial: "\e91E",
+  // diploma-hat: "\e902", (already used in Nav-bar & IT Support Submenu)
+  // shield: "\e903", (already used in Nav-bar)
+  //
+  padlock: "\e91C",
+  //
+  // Developer Course Submenu
+  //
+  // laptop: "\e90E", (already used in Bespoke & IT Support Submenu)
+  // code: "\eA80", (already used in Nav-bar)
+  //
+  question-mark: "\e91F",
+  // handshake: "\e916", (already used in Telecoms Services Submenu)
+  //
+  //
+  //
+  quote-bubble: "\e905",
   star: "\e9D9",
   arrow-up: "\eA3A",
   arrow-right: "\eA3C",
   arrow-down: "\eA3E",
   arrow-left: "\eA40",
-
   facebook: "\eA90",
   instagram: "\eA92",
   twitter: "\eA96",
