--- a/scss/0.base/_3.variables.scss
+++ b/scss/0.base/_3.variables.scss
@@ -22,7 +22,7 @@ $colors: (
   header-top-button-nav-hover-off: #343645,
   header-top-button-nav-hover-on: #21242e,
   //
-  // Nav Bar & Item's Icons
+  // Nav Bar & Nav Item's Icons
   //
   nav-bar-background: #343645,
   bespoke-software-icon: #67809f,
@@ -41,5 +41,15 @@ $colors: (
   telecoms-services-hover: #d64541,
   web-design-hover: #926fb1,
   cyber-security-hover: #f62459,
-  developer-course-hover: #ce4126
+  developer-course-hover: #ce4126,
+  //
+  // Submenu Colours
+  //
+  bespoke-software-submenu: #516781,
+  it-support-submenu: #286abd,
+  digital-marketing-submenu: #25a25a,
+  telecoms-services-submenu: #bc2c28,
+  web-design-submenu: #79539a,
+  cyber-security-submenu: #de0a3f,
+  developer-course-submenu: #a3321e
 );
