--- a/scss/2.header/_1.header-top.scss
+++ b/scss/2.header/_1.header-top.scss
@@ -1,6 +1,6 @@
 #header-top {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   height: 110px;
   padding: 20px 0;
