--- a/css/main.css
+++ b/css/main.css
@@ -383,11 +383,32 @@ body {
   height: 110px;
   padding: 20px 0; }
 
+#header-top img {
+  padding: 0 15px;
+  max-width: 100%; }
+
+.search-form-flex {
+  display: inline-flex;
+  align-items: center; }
+
+.search-bar {
+  width: 240px;
+  border: #cccccc 1px solid;
+  font-size: 14px;
+  line-height: 1.42857143;
+  padding: 17px 15px;
+  margin-left: 21px; }
+
+.hidden {
+  display: none; }
+
 #header-top-buttons-flex {
-  display: flex; }
+  display: flex;
+  padding: 0 15px;
+  align-items: center; }
 
 .header-top-buttons {
-  display: flex;
+  display: inline-flex;
   align-items: center;
   text-transform: uppercase;
   text-align: center;
@@ -411,7 +432,9 @@ body {
     background-color: #84858f; }
 
 #header-search-button {
-  background-color: #999aa3; }
+  background-color: #999aa3;
+  margin-left: -5px;
+  border-radius: 0 3px 3px 0; }
   #header-search-button:hover {
     background-color: #7f808a; }
 
@@ -437,7 +460,7 @@ body {
 .icon__header-top--search {
   font-family: "icomoon" !important;
   margin: 0 5px 0 0;
-  font-size: 2.1rem;
+  font-size: 1.9rem;
   font-weight: 900; }
   .icon__header-top--search:before {
     content: "";
